Docker_Kubernetes/yaml/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: w3c
  labels:
    app: w3c
spec:
  selector:
    app: w3c
  ports:
  - protocol: TCP
    port: 80
